feat: Hemos aprendido el uso de Http - y los RES y REQ

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node-basico",
   "version": "1.0.0",
+  "type": "module",
   "description": "Introducción sobre node",
   "main": "index.js",
   "scripts": {
